[FIX] Claude nitpicks